# cytotoxic-drug-rd-model

./: .gitignore  2_tumor_diffusion_pde_analysis.ipynb  2_tumor_diffusion_pde_analysis.py  3_tumor_ode_surrogate_nn.ipynb  3_tumor_ode_surrogate_nn.py  4_sensetivity_analysis.py  5_ode_pde_data_assimilation.ipynb  5_ode_pde_data_assimilation.py  6_pde_assimilation_pinn.ipynb  6_pde_assimilation_pinn.py  6_pde_assimilation_pinn_copy.ipynb  6_pde_assimilation_pinn_copy.py  7_supernet_supermodel.ipynb  7_supernet_supermodel.py  LICENSE  README.md  notebook.ipynb  pyproject.toml  sensetivity_analysis.ipynb  tb_mlp.pt  tumor_diffusion_pde_analysis.ipynb  tumor_ode_surrogate_nn.ipynb
node/: COMMANDS.md  README.md  neural_ode_learning.ipynb  neural_ode_learning.py
node/figs/: neural_ode_data_samples_large_mlp_run_data.json  neural_ode_extrapolation_large_mlp_large_mlp_run_data.json  neural_ode_extrapolation_small_mlp_small_mlp_run_data.json  neural_ode_test_predictions_large_mlp_large_mlp_run_data.json  neural_ode_test_predictions_small_mlp_small_mlp_run_data.json
