[project]
name = "isz-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "salib>=1.5.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
]
