[project]
name = "isz-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.1.0",
    "salib>=1.5.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
]
